Updated ParallelKDE.jl git repository

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
           julia -e '
             import Pkg;
             Pkg.add(
-              url="git@github.com:chrissm23/ParallelKDE.jl",
+              url="git@github.com:chrissm23/ParallelKDE.jl.git",
               rev="main"
             );
             Pkg.precompile()
