--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,19 +15,21 @@ jobs:
         python-version: [3.12] # test on multiple Python versions
 
     steps:
-      - name: Checkout code
+      - name: Checkout ParallelKDEpy
         uses: actions/checkout@v4
+
+      - name: Checkout ParallelKDE (julia)
+        uses: actions/checkout@v4
+        with:
+          repository: chrissm23/ParallelKDE.jl
+          token: ${{ secrets.JULIA_PARALLELKDE_TOKEN }}
+          path: parallelkde
 
       # 1️⃣ Install Julia
       - name: Setup Julia
         uses: julia-actions/setup-julia@v2
         with:
           version: "1.11" # match the version ParallelKDE.jl supports
-      #   Configure SSH for private Julia repo
-      - name: Start ssh-agent and add SHH key
-        uses: webfactory/ssh-agent@v0.9.0
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
       # Install ParallelKDE.jl
       - name: Install ParallelKDE.jl (via SSH deploy key)
@@ -35,8 +37,7 @@ jobs:
           julia -e '
             import Pkg;
             Pkg.add(
-              url="git@github.com:chrissm23/ParallelKDE.jl.git",
-              rev="main"
+              url="./parallelkde",
             );
             Pkg.precompile()
           '
