Attempt to fix ci docs

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,7 +2,7 @@ name: docs
 
 on:
   push:
-    branches: [main, dev]
+    branches: [main, dev, docs/readme]
   pull_request:
     branches: [main]
 
@@ -22,6 +22,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      - name: Checkout ParallelKDE (julia)
+        uses: actions/checkout@v4
+        with:
+          repository: chrissm23/ParallelKDE.jl
+          token: ${{ secrets.PARALLELKDE_TOKEN }}
+          path: parallelkde
+      - name: Setup Julia
+        uses: julia-actions/setup-julia@v2
+        with:
+          version: "1.11" # match the version ParallelKDE.jl supports
+
       - uses: actions/setup-python@v5
         with:
           python-version: "3.12"
