--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,7 +2,7 @@ name: docs
 
 on:
   push:
-    branches: [main, dev, docs/readme]
+    branches: [main, dev]
   pull_request:
     branches: [main]
 
