--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,10 +2,12 @@ name: docs
 
 on:
   push:
-    branches: [main, dev]
+    branches: [dev]
+    tags:
+      - "v*"
+      - "!v*-*"
   pull_request:
-    branches: [main]
-
+    branches: [main, dev]
   workflow_dispatch:
 
 permissions:
@@ -22,33 +24,61 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
-      - name: Checkout ParallelKDE (julia)
-        uses: actions/checkout@v4
         with:
-          repository: chrissm23/ParallelKDE.jl
-          token: ${{ secrets.PARALLELKDE_TOKEN }}
-          path: parallelkde
-      - name: Setup Julia
-        uses: julia-actions/setup-julia@v2
-        with:
-          version: "1.11" # match the version ParallelKDE.jl supports
+          fetch-depth: 0 # SMV needs full history/tags
 
       - uses: actions/setup-python@v5
         with:
-          python-version: "3.12"
+          python-version: "3.x"
       - name: Install Poetry
         run: pipx install poetry
       - name: Install dependencies (with docs group)
         run: poetry install --with docs
-      - name: Build Sphinx HTML
-        run: poetry run sphinx-build -b html docs/source docs/build/html
-      - name: Upload artifact
+      - name: Discover latest stable tag
+        id: stable
+        shell: bash
+        run: |
+          set -euo pipefail
+          LATEST=$(git tag -l 'v[0-9]*' | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+$' | sort -V | tail -n1 || true)
+          echo "latest=$LATEST" >> "$GITHUB_OUTPUT"
+      - name: Build Sphinx (multi-version)
+        run: |
+          if [ -n "${{ steps.stable.outputs.latest }}" ]; then
+            echo "Building dev and ${{ steps.stable.outputs.latest }}"
+            poetry run sphinx-multiversion docs/source docs/build/html \
+              -D smv_tag_whitelist="^${{ steps.stable.outputs.latest }}$" \
+              -D smv_branch_whitelist="^(dev)$"
+          else
+            echo "No stable tag found; building dev only"
+            poetry run sphinx-multiversion docs/source docs/build/html \
+              -D smv_tag_whitelist="^$" \
+              -D smv_branch_whitelist="^(dev)$"
+          fi
+      - name: Create 'stable' alias and root redirect
+        shell: bash
+        run: |
+          set -euxo pipefail
+          cd docs/build/html
+          touch .nojekyll
+          LATEST="${{ steps.stable.outputs.latest }}"
+          if [[ -n "$LATEST" && -d "$LATEST" ]]; then
+            rm -rf stable && cp -R "$LATEST" stable
+          elif [[ -d dev ]]; then
+            rm -rf stable && cp -R dev stable
+          fi
+          cat > index.html <<'HTML'
+          <!doctype html><meta charset="utf-8">
+          <meta http-eqiv="refresh" content="0; url=./stable/">
+          <title>Redirecting to stable docs...</title>
+          <a href="./stable/">Click here if you're not redirected.</a>
+          HTML
+      - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: docs/build/html
 
   deploy:
+    if: ${{ github.event_name == 'push' }}
     needs: build
     runs-on: ubuntu-latest
     environment:
