--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,23 @@
 [tool.poetry]
 name = "parallelkdepy"
-version = "1.0.0-beta.1"                                    # bump this on each release
+version = "0.0.0"
 description = "Python wrapper of ParallelKDE.jl"
 authors = ["Christian Sustay <christian.sustay@tum.de>"]
-license = "MIT"                                             # or whichever license you chose
+license = "MIT" # or whichever license you chose
 readme = "README.md"
 homepage = "https://github.com/chrissm23/ParallelKDEpy"
 repository = "https://github.com/chrissm23/ParallelKDEpy"
 documentation = "https://chrissm23.github.io/ParallelKDEpy" # optional
 packages = [{ include = "parallelkdepy", from = "src" }]
+include = [
+  { path = "src/parallelkdepy/juliapkg.json", format = [
+    "sdist",
+    "wheel",
+  ] },
+]
+
+[tool.poetry-dynamic-versioning]
+enable = true
 
 [tool.poetry.dependencies]
 python = "^3.12"   # minimum supported Python version
@@ -20,9 +29,12 @@ numpy = "^2.2"
 pytest = "^8.3"
 pytest-cov = "^6.1"
 
+[tool.poetry.requires-plugins]
+poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }
+
 [build-system]
-requires = ["poetry-core>=1.5.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core>=1.5.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
+build-backend = "poetry_dynamic_versioning.backend"
 
 
 [tool.poetry.group.docs]
@@ -30,6 +42,7 @@ optional = true
 
 [tool.poetry.group.docs.dependencies]
 sphinx = "^8.2"
+sphinx-multiversion = "^0.2.5"
 myst-parser = "^4.0"
 furo = "^2024.04"
 sphinx-autobuild = "^2024.10"
